--- a/static/responsive.css
+++ b/static/responsive.css
@@ -125,12 +125,13 @@
 		font-size: 36px;
 		line-height: 46px;
 		font-weight: 700;
-		margin-bottom: 0.75rem;
+		margin-bottom: 0.5rem;
 	}
 
 	h1.h1-plus {
 		font-size: 44px;
 		line-height: 54px;
+		margin-bottom: 0.75rem;
 	}
 
 	h2 {
@@ -158,7 +159,7 @@
 		font-size: 18px;
 		line-height: 28px;
 		font-weight: 700;
-		margin-bottom: .5rem;
+		margin-bottom: .15rem;
 	}
 
 	h6 {
@@ -192,7 +193,7 @@
 		margin-bottom: 0.5rem;
 		letter-spacing: 2px;
 		text-transform: uppercase;
-		color: var(--AzureRadiance);
+		color: var(--AzureRadiance) !important;
 	}
 
 }
@@ -240,7 +241,7 @@
 	}
 
 	.col-4 {
-		flex-basis: calc(33.332% - 32px);
+		flex-basis: calc(23.332% - 32px);
 		margin: 0 16px;
 	}
 
@@ -255,8 +256,7 @@
 	}
 
 	.col-7 {
-		flex-basis: calc(99.996% - 32px);
-		margin: 0 16px;
+		flex-basis: calc(66.664% - 32px);
 	}
 
 	.col-8 {
