--- a/static/site.css
+++ b/static/site.css
@@ -210,6 +210,97 @@ body {
 		background-color: var(--White);
 	}
 
+	.sec-footer {
+		margin: 4rem 0 0 0 0;
+		padding: 2.5rem 0 1.5rem 0 ;
+		background: var(--Rhino-Gradient);
+	}
+
+	.sec-footer-content a {
+		color: var(--White);
+		text-decoration: none;
+		transition: 0.4s;
+	}
+
+	.sec-footer-content a:hover {
+		color: var(--AzureRadiance);
+		transition: 0.4s;
+	}
+
+	.sec-footer .caption {
+		color: var(--White);
+	}
+
+	.sec-footer-content li {
+		display: inline;
+	}
+
+	.sec-footer span {
+		display: inline-block;
+		line-height: 22px;
+	}
+
+	.sec-footer li {
+		display: inline;
+		line-height: 22px;
+	}
+
+	.caption.opacity {
+		opacity: 30%;
+		font-size: 13px;
+		line-height: 18px;
+	}
+
+	.sec-footer-content img {
+		height: 74px;
+		margin-bottom: 0.5rem;
+	}
+
+	.footer-bottom {
+		margin-top: 3rem;
+	}
+
+	.portfolio-link {
+		width: 24px;
+		margin: 2px 0 0 0;
+		opacity: 20%;
+		transition: 0.3s;
+	}
+
+	.portfolio-link:hover  {
+		opacity: 100%;
+		transition: 0.3s;
+	}
+
+	.social-icons {
+		width: 18px;
+		vertical-align: middle;
+		margin: 0 0 2px 10px;
+		opacity: 76%;
+		transition: 0.3s;
+	}
+
+	.social-icons:hover {
+		fill: var(--AzureRadiance);
+		opacity: 100%;
+		transition: 0.3s;
+	}
+
+	span + .social-icons {
+		margin: 0 0 2px 0px;
+	}
+
+	a > .caption {
+		color: var(--White);
+		transition: 0.3s;
+	}
+
+	a > .caption:hover {
+		color: var(--AzureRadiance);
+		transition: 0.3s;
+	}
+
+
 }
 
 /* Tablet */
@@ -322,6 +413,12 @@ body {
 		color: var(--White);
 	}
 
+
+	.sec-hero.small-hero {
+		padding: 2.5rem 0 0rem 0;
+		overflow: hidden;
+	}
+
 	.sec-hero .background-image {
 		width: 100%;
 		max-width: 100%;
@@ -338,12 +435,25 @@ body {
 		float: left;
 	}
 
+	.sec-hero .hero-image img {
+		width: 50%;
+		max-height: 784px;
+		max-width: 650px;
+		margin: -13rem 0 0 auto;
+		display: inline-block;
+		float: right;
+		top: 0;
+		position: relative;
+		z-index: 0;
+
+	}
+
 	.sec-hero > .wrapper {
 		z-index: 1;
 	}
 
-	.sec-hero h1, .sec-cta h1 {
-		color: var(--White)
+	.sec-hero h1, .sec-cta h1, .sec-hero p {
+		color: var(--White);
 	}
 
 	.sec-hero .kicker {
@@ -553,6 +663,12 @@ body {
 		border-color: var(--AzureRadiance);
 	}
 
+	.sidebar .secondary {
+		color: var(--White) !important;
+		background-color: var(--Rhino);
+		border-color: var(--Rhino);
+	}
+
 	.button > img {
 		widows: 16px;
 		height: 16px;
@@ -569,6 +685,12 @@ body {
 	.button.secondary:hover {
 		background-color: var(--Onahau);
 		border-color: var(--Onahau);
+		transition: 0.3s;
+	}
+
+	.sidebar .secondary:hover {
+		background-color: var(--BahamaBlue);
+		border-color: var(--BahamaBlue);
 		transition: 0.3s;
 	}
 
@@ -760,7 +882,7 @@ body {
 
 	.carousel-item {
 		text-align: center;
-		color: var(--Rhino);
+		color: var(--Rhino) !important;
 		font-weight: 600;
 		line-height: 16px;
 	}
@@ -893,109 +1015,87 @@ body {
 	}
 }
 
+/* ----- -------------- ----- */
+/* ----- -------------- ----- */
+/* ----- ------UI------ ----- */
+/* ----- -------------- ----- */
+/* ----- -------------- ----- */
 
+/* Mobile */
+@media screen and (min-width: 0px) {
 
-
-
-
-
-
-
-
-
-	.sec-footer {
-		margin: 4rem 0 0 0 0;
-		padding: 2.5rem 0 1.5rem 0 ;
-		background: var(--Rhino-Gradient);
+	.serv-content {
+		margin: 2rem 0 4rem 0;
 	}
 
-	.sec-footer-content a {
+	.service-item {
+		border-bottom-style: solid;
+		border-bottom-width: 2px;
+		border-color: var(--Onahau);
+		padding-bottom: 24px;
+		margin-bottom: 40px;
+		display: flex;
+	}
+
+	.service-item:first-of-type {
+		border-top-style: solid;
+		border-top-width: 2px;
+		padding-top: 40px;
+	}
+
+	.service-item img {
+		margin: 0 32px 0 0;
+		max-width: 48px;
+		align-self: flex-start;
+	}
+
+	.service-item div {
+		margin: 0 0 0 0px;
+		align-self: flex-start;
+	}
+
+	.sidebar {
+		text-align: center;
+		border-radius: 8px;
+		margin: 0 0 32px 0;
+		overflow: hidden;
+	}
+
+	.sidebar.booking {
+		background: var(--Rhino-Gradient) !important;
+	}
+
+	.sidebar h4 {
 		color: var(--White);
-		text-decoration: none;
-		transition: 0.4s;
+		margin: 1.25rem 1.75rem 0.4rem 1.75rem;
 	}
 
-	.sec-footer-content a:hover {
-		color: var(--AzureRadiance);
-		transition: 0.4s;
+	.sidebar-image{
+		margin-top: 16px;
+		width: 105%;
+		margin-left: -2.5%;
+		margin-bottom: -1.25%
 	}
 
-	.sec-footer .caption {
-		color: var(--White);
+	.booking .sidebar-image {
+		width: 110%;
+		margin-left: -5%;
+		margin-top: 32px;
 	}
 
-	.sec-footer-content li {
-		display: inline;
-	}
+}
 
-	.sec-footer-content:last-of-type {
-		margin-left: 16px;
-	}
-	.sec-footer-content:first-of-type {
-		margin-right: 7%;
-	}
+/* Tablet */
+@media screen and (min-width: 720px) {
+}
 
-	.sec-footer span {
-		display: inline-block;
-		line-height: 22px;
-	}
+/* Desktop */
+@media screen and (min-width: 1280px) {
+}
 
-	.sec-footer li {
-		display: inline;
-		line-height: 22px;
-	}
+/* Desktop Large */
+@media screen and (min-width: 1700px) {
+}
 
-	.caption.opacity {
-		opacity: 30%;
-		font-size: 13px;
-		line-height: 18px;
-	}
 
-	.sec-footer-content img {
-		height: 74px;
-		margin-bottom: 0.5rem;
-	}
 
-	.footer-bottom {
-		margin-top: 3rem;
-	}
-
-	.portfolio-link {
-		width: 24px;
-		margin: 2px 0 0 0;
-		opacity: 20%;
-		transition: 0.3s;
-	}
-
-	.portfolio-link:hover  {
-		opacity: 100%;
-		transition: 0.3s;
-	}
-
-	.social-icons {
-		width: 18px;
-		vertical-align: middle;
-		margin: 0 0 2px 10px;
-		opacity: 76%;
-		transition: 0.3s;
-	}
-
-	.social-icons:hover {
-		fill: var(--AzureRadiance);
-		opacity: 100%;
-		transition: 0.3s;
-	}
-
-	span + .social-icons {
-		margin: 0 0 2px 0px;
-	}
-
-	a > .caption {
-		color: var(--White);
-		transition: 0.3s;
-	}
-
-	a > .caption:hover {
-		color: var(--AzureRadiance);
-		transition: 0.3s;
-	}
